--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "jest --passWithNoTests",
     "dev": "nodemon --exec ts-node ./src/server.ts",
-    "start": "node ./dist/server.js",
+    "start": "npm run build && node ./dist/server.js",
     "build": "tsc"
   },
   "keywords": [],
