--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
+    "@react-oauth/google": "^0.12.1",
     "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.5.0",
     "autoprefixer": "^10.4.20",
