--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,8 @@
     "@react-oauth/google": "^0.12.1",
     "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.5.0",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
     "@tanstack/react-table": "^8.20.6",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
