--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "google-auth-library": "^9.15.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "redis": "^4.7.0",
     "stripe": "^17.6.0"
@@ -34,6 +35,7 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.5",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
