--- a/backend/package.json
+++ b/backend/package.json
@@ -20,11 +20,14 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "google-auth-library": "^9.15.0",
+    "inversify": "^6.2.2",
+    "inversify-express-utils": "^6.4.10",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "redis": "^4.7.0",
+    "reflect-metadata": "^0.2.2",
     "stripe": "^17.6.0"
   },
   "devDependencies": {
