--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
     "test": "jest --passWithNoTests",
     "dev": "nodemon --exec ts-node ./src/server.ts",
     "start": "npm run build && node ./dist/server.js",
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint src/",
+    "lint:fix": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +33,7 @@
     "stripe": "^17.6.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
@@ -40,10 +43,13 @@
     "@types/node": "^22.10.5",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.25.0"
   }
 }
