--- a/backend/package.json
+++ b/backend/package.json
@@ -40,12 +40,14 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.5",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
     "eslint": "^9.21.0",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
