--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.17.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.471.2",
@@ -72,6 +73,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^22.10.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
