--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "google-auth-library": "^9.15.0",
+    "html-pdf-node": "^1.0.8",
     "inversify": "^6.2.2",
     "inversify-express-utils": "^6.4.10",
     "jsonwebtoken": "^9.0.2",
@@ -42,6 +43,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/html-pdf-node": "^1.0.2",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
