--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,24 +22,24 @@ services:
       - FRONTEND_URL=http://frontend:5173
       - PORT=5000
     volumes:
-      - ./backend:/app
-      - /app/node_modules
+      - ./backend:/app  # Mount local backend code
+      - /app/node_modules  # Prevent overwriting node_modules
     networks:
       - inspecto
     ports:
       - "5000:5000"
     depends_on:
       - redis
-  
+
   frontend:
-    build: 
+    build:
       context: ./frontend
       dockerfile: Dockerfile
     restart: unless-stopped
     env_file: ./frontend/.env
     environment:
       - NODE_ENV=production
-      - VITE_API_URL=http://localhost:5000
+      - VITE_API_URL=http://api:5000
     volumes:
       - ./frontend:/app
       - /app/node_modules
