--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "pdfkit": "^0.16.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.8.1",
     "stripe": "^17.6.0"
   },
   "devDependencies": {
