--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,6 +63,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "recharts": "^2.15.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.1",
     "styled-components": "^6.1.14",
     "tailwind-merge": "^2.6.0",
