--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "start": "npm run build && node ./dist/server.js",
     "build": "tsc",
     "lint": "eslint src/",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "seed:inspection-types": "ts-node src/scripts/seed-inspection-types.ts"
   },
   "keywords": [],
   "author": "",
