--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,4 +3,7 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm ci
 COPY . .
-CMD ["npm","run","dev"] 
+RUN npm run build
+EXPOSE 10000
+ENV NODE_ENV=production
+CMD ["node","dist/server.js"] 
