--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
     "build": "tsc",
     "lint": "eslint src/",
     "lint:fix": "eslint . --fix",
-    "seed:inspection-types": "ts-node src/scripts/seed-inspection-types.ts"
+    "seed:inspection-types": "ts-node src/scripts/seed-inspection-types.ts",
+    "start:backend": "cross-env NODE_ENV=production npm start",
+    "dev:backend": "cross-env NODE_ENV=development nodemon --exec \"./node_modules/.bin/ts-node\" ./src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -52,6 +54,7 @@
     "@types/node": "^22.10.5",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
+    "cross-env": "^7.0.3",
     "eslint": "^9.21.0",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
