--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/pdfkit": "^0.13.9",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
@@ -35,7 +34,7 @@
     "mongoose": "^8.9.3",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
-    "pdfkit": "^0.16.0",
+    "puppeteer": "^24.8.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "socket.io": "^4.8.1",
@@ -47,7 +46,6 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/html-pdf-node": "^1.0.2",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
