--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,60 @@
-FROM node:20-alpine
+FROM node:23-slim
+
+# Install all dependencies required for Chromium (Puppeteer)
+RUN apt-get update && apt-get install -y \
+    ca-certificates \
+    fonts-liberation \
+    libasound2 \
+    libatk-bridge2.0-0 \
+    libatk1.0-0 \
+    libc6 \
+    libcairo2 \
+    libcups2 \
+    libdbus-1-3 \
+    libexpat1 \
+    libfontconfig1 \
+    libgbm1 \
+    libgcc1 \
+    libglib2.0-0 \
+    libgtk-3-0 \
+    libnspr4 \
+    libnss3 \
+    libpango-1.0-0 \
+    libpangocairo-1.0-0 \
+    libstdc++6 \
+    libx11-6 \
+    libx11-xcb1 \
+    libxcb1 \
+    libxcomposite1 \
+    libxcursor1 \
+    libxdamage1 \
+    libxext6 \
+    libxfixes3 \
+    libxi6 \
+    libxrandr2 \
+    libxrender1 \
+    libxss1 \
+    libxtst6 \
+    lsb-release \
+    wget \
+    xdg-utils \
+    --no-install-recommends && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
+
 COPY package*.json ./
 RUN npm ci
+
+# Ensure Puppeteer's Chrome gets downloaded
+RUN npx puppeteer browsers install chrome
+
 COPY . .
+
 RUN npm run build
+
 EXPOSE 10000
 ENV NODE_ENV=production
-CMD ["node","dist/server.js"] 
+
+CMD ["node", "dist/server.js"]
