--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,31 +9,32 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4.2.2
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3.10.0
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3.4.0
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
         
       - name: Build and push backend image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v6.16.0
         with:
           context: ./backend
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/inspecto-backend:latest
+            ${{ secrets.DOCKER_USERNAME }}/inspecto-backend:latest
       
       - name: Deploy to Production
         env:
           SSH_KEY: ${{ secrets.SSH_KEY }}
           SERVER_IP: ${{ secrets.PRODUCTION_SERVER_IP }}
         run: |
-          ssh -i "$SSH_KEY" root@$SERVER_IP << 'EOF'
+          ssh -o StrictHostKeyChecking=no -i private_key.pem root@$SERVER_IP << 'EOF'
+          cd ~/Inspecto
           docker-compose -f docker-compose.yml pull
           docker-compose -f docker-compose.yml up -d
           EOF
