--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,7 @@ services:
       - inspecto
 
   api:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    image: squarestory/inspecto-backend:latest
     restart: always
     env_file: ./backend/.env
     environment:
