--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -34,34 +34,25 @@ jobs:
             chmod 600 private_key.pem
         env:
             SSH_KEY: ${{ secrets.SSH_KEY }}
-
-      - name: Test SSH Connection
+        
+      - name: Deploy to AWS EC2
         env:
             SERVER_IP: ${{ secrets.PRODUCTION_SERVER_IP }}
         run: |
-                mkdir -p ~/.ssh
-                touch ~/.ssh/known_hosts
-                ssh-keyscan -H $SERVER_IP >> ~/.ssh/known_hosts
-                ssh -i private_key.pem -o "UserKnownHostsFile=~/.ssh/known_hosts" ubuntu@$SERVER_IP echo "SSH connection successful"
+            set -e
+            ssh -i private_key.pem ubuntu@$SERVER_IP << 'EOF'
+              sudo apt-get update
+              if ! command -v docker-compose &> /dev/null; then
+                sudo apt-get install -y docker-compose
+              fi
+              if [ ! -d "~/Inspecto" ]; then
+                git clone https://github.com/square-story/Inspecto.git ~/Inspecto
+              fi
+              cd ~/Inspecto
+              docker-compose pull
+              docker-compose up -d
+            EOF
 
-      - name: Deploy to AWS EC2
-        env:
-                SERVER_IP: ${{ secrets.PRODUCTION_SERVER_IP }}
-        run: |
-                set -e
-                mkdir -p ~/.ssh
-                touch ~/.ssh/known_hosts
-                ssh-keyscan -H $SERVER_IP >> ~/.ssh/known_hosts
-                ssh -i private_key.pem -o "UserKnownHostsFile=~/.ssh/known_hosts" ubuntu@$SERVER_IP << 'EOF'
-                  sudo apt-get update
-                  sudo apt-get install -y docker-compose
-                  if [ ! -d "~/Inspecto" ]; then
-                    git clone https://github.com/square-story/Inspecto.git ~/Inspecto
-                  fi
-                  cd ~/Inspecto
-                  docker-compose pull
-                  docker-compose up -d
-                EOF
       - name: Clean Up SSH Key
         run: |
             rm -f private_key.pem
