--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -30,25 +30,27 @@ jobs:
 
       - name: Setup SSH Key
         run: |
-              echo "$SSH_KEY" > private_key.pem
-              chmod 600 private_key.pem
+                echo "$SSH_KEY" > private_key.pem
+                chmod 600 private_key.pem
         env:
-              SSH_KEY: ${{ secrets.SSH_KEY }}
-              
+                SSH_KEY: ${{ secrets.SSH_KEY }}
+        
       - name: Add Server to Known Hosts
         run: |
-              ssh-keyscan -H ${{ secrets.PRODUCTION_SERVER_IP }} >> ~/.ssh/known_hosts
+                mkdir -p ~/.ssh
+                ssh-keyscan -H ${{ secrets.PRODUCTION_SERVER_IP }} >> ~/.ssh/known_hosts
         
       - name: Deploy to AWS EC2
         env:
-              SERVER_IP: ${{ secrets.PRODUCTION_SERVER_IP }}
+                SERVER_IP: ${{ secrets.PRODUCTION_SERVER_IP }}
         run: |
-              ssh -i private_key.pem ubuntu@$SERVER_IP << 'EOF'
-                sudo apt-get update
-                cd ~/Inspecto
-                docker-compose pull
-                docker-compose up -d
-              EOF
+                ssh -i private_key.pem ubuntu@$SERVER_IP << 'EOF'
+                  sudo apt-get update
+                  cd ~/Inspecto
+                  docker-compose pull
+                  docker-compose up -d
+                EOF
+
       - name: Clean Up SSH Key
         run: |
             rm -f private_key.pem
