--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           context: ./backend
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/inspecto-backend:latest
+          tags: inspecto_api:latest
 
       - name: Setup SSH Key
         run: |
@@ -45,6 +45,7 @@ jobs:
                 SERVER_IP: ${{ secrets.PRODUCTION_SERVER_IP }}
         run: |
                 ssh -i private_key.pem ubuntu@$SERVER_IP << 'EOF'
+                  set -e
                   sudo apt-get update
                   cd ~/Inspecto
                   docker-compose pull --no-cache
