--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - inspecto
 
   api:
-    image: squarestory/inspecto-backend:latest
+    image: inspecto_api:latest
     restart: always
     env_file: ./backend/.env
     environment:
