--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -48,8 +48,8 @@ jobs:
                   set -e
                   sudo apt-get update
                   cd ~/Inspecto
-                  docker-compose pull --no-cache
-                  docker-compose up -d --force-recreate
+                  docker-compose pull
+                  docker-compose up -d
                 EOF
 
       - name: Clean Up SSH Key
