--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -42,15 +42,16 @@ jobs:
         
       - name: Deploy to AWS EC2
         env:
-                SERVER_IP: ${{ secrets.PRODUCTION_SERVER_IP }}
+          SERVER_IP: ${{ secrets.PRODUCTION_SERVER_IP }}
         run: |
-                ssh -i private_key.pem ubuntu@$SERVER_IP << 'EOF'
-                  set -e
-                  sudo apt-get update
-                  cd ~/Inspecto
-                  docker-compose pull
-                  docker-compose up -d
-                EOF
+          ssh -i private_key.pem ubuntu@$SERVER_IP << 'EOF'
+          set -e
+          sudo sed -i 's/noble/bullseye/g' /etc/apt/sources.list
+          sudo apt-get update
+          cd ~/Inspecto
+          docker-compose pull
+          docker-compose up -d
+          EOF
 
       - name: Clean Up SSH Key
         run: |
