fix: remove force-recreate option from docker-compose up command in deployment workflow

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -40,6 +40,6 @@ jobs:
             set -e
             cd ~/Inspecto
             docker-compose pull
-            docker-compose up -d --force-recreate
+            docker-compose up -d
           EOF
           rm -f private_key.pem
