feat: added cropper image for user side only

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,11 +55,13 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.471.2",
     "postcss": "^8.4.49",
+    "radix-ui": "^1.4.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
+    "react-image-crop": "^11.0.10",
     "react-phone-number-input": "^3.4.11",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
