--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint src/",
     "lint:fix": "eslint . --fix",
     "seed:inspection-types": "ts-node src/scripts/seed-inspection-types.ts",
+    "seed:admin": "ts-node src/scripts/seed-admin.ts",
     "start:backend": "cross-env NODE_ENV=production npm start",
     "dev:backend": "cross-env NODE_ENV=development nodemon --exec \"./node_modules/.bin/ts-node\" ./src/server.ts"
   },
